Fixed a xaxis rendering issue, and fixed an overflow issue

--- a/visuals/timescale/css/TimeScale.css
+++ b/visuals/timescale/css/TimeScale.css
@@ -30,6 +30,7 @@ svg {
 body, html {
     margin: 0;
     padding: 0;
+    overflow: hidden;
 }
 
 
